--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,3 +18,31 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: matheusjustino/argocd-golang
           tags: ${{ github.sha }}, latest
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Kustomize
+        uses: imranismail/setup-kustomize@v1
+        with:
+          kustomize_version: v3.6.1
+        
+      - name: Update k8s
+        run: |
+          cd k8s
+          kustomize edit set image matheusjustino/argocd-golang=matheusjustino/argocd-golang:${{ github.sha }}
+          cat kustomization.yaml
+
+      - name: Commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Deploy Action"
+          git commit -am "Change image tag"
+
+      - name: Push
+        uses: ad-m/github-push-action@master
