--- a/k8s/mongodb/deployment.yaml
+++ b/k8s/mongodb/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb-deployment
+  namespace: argocd-golang
   labels:
     app: mongodb
 spec:
